feat: add missing enpoints
